Fix lower case type name conflicting with variable name

--- a/ICSharpCode.Decompiler.Tests/ICSharpCode.Decompiler.Tests.csproj
+++ b/ICSharpCode.Decompiler.Tests/ICSharpCode.Decompiler.Tests.csproj
@@ -155,6 +155,9 @@
     <Compile Include="TestCases\Pretty\ExpandParamsArgumentsDisabled.cs" />
     <Compile Include="TestCases\Pretty\ExtensionProperties.cs" />
     <Compile Include="TestCases\Pretty\Issue3541.cs" />
+    <Compile Include="TestCases\Pretty\Issue3571_C.cs" />
+    <Compile Include="TestCases\Pretty\Issue3571_B.cs" />
+    <Compile Include="TestCases\Pretty\Issue3571_A.cs" />
     <None Include="TestCases\ILPretty\Issue3504.cs" />
     <Compile Include="TestCases\ILPretty\MonoFixed.cs" />
     <Compile Include="TestCases\Pretty\Comparisons.cs" />
