Do not create object initializers for tuples

--- a/ICSharpCode.Decompiler.Tests/ICSharpCode.Decompiler.Tests.csproj
+++ b/ICSharpCode.Decompiler.Tests/ICSharpCode.Decompiler.Tests.csproj
@@ -158,6 +158,7 @@
     <Compile Include="TestCases\Pretty\Issue3571_C.cs" />
     <Compile Include="TestCases\Pretty\Issue3571_B.cs" />
     <Compile Include="TestCases\Pretty\Issue3571_A.cs" />
+    <Compile Include="TestCases\Pretty\Issue3576.cs" />
     <None Include="TestCases\Ugly\NoLocalFunctions.Expected.cs" />
     <None Include="TestCases\ILPretty\Issue3504.cs" />
     <Compile Include="TestCases\ILPretty\MonoFixed.cs" />
