Rewrite TransformFieldAndConstructorInitializers from a step-by-step AST-based analysis to an analysis that tracks the whole constructor body.

--- a/ICSharpCode.Decompiler.Tests/ICSharpCode.Decompiler.Tests.csproj
+++ b/ICSharpCode.Decompiler.Tests/ICSharpCode.Decompiler.Tests.csproj
@@ -158,14 +158,16 @@
     <Compile Include="TestCases\ILPretty\Issue3552.cs" />
     <Compile Include="TestCases\Pretty\ExpandParamsArgumentsDisabled.cs" />
     <Compile Include="TestCases\Pretty\ExtensionProperties.cs" />
+    <Compile Include="TestCases\Pretty\Issue3452.cs" />
     <Compile Include="TestCases\Pretty\Issue3541.cs" />
     <Compile Include="TestCases\Pretty\Issue3571_C.cs" />
     <Compile Include="TestCases\Pretty\Issue3571_B.cs" />
     <Compile Include="TestCases\Pretty\Issue3571_A.cs" />
     <Compile Include="TestCases\Pretty\Issue3576.cs" />
     <Compile Include="TestCases\Pretty\Issue3584.cs" />
-    <Compile Include="TestCases\Pretty\PlaystationPreferPrimary.cs" />
-    <Compile Include="TestCases\Pretty\Playstation.cs" />
+    <Compile Include="TestCases\Pretty\Issue3610.cs" />
+    <Compile Include="TestCases\Pretty\Issue3611.cs" />
+    <Compile Include="TestCases\Pretty\Issue3598.cs" />
     <None Include="TestCases\Ugly\NoLocalFunctions.Expected.cs" />
     <None Include="TestCases\ILPretty\Issue3504.cs" />
     <Compile Include="TestCases\ILPretty\MonoFixed.cs" />
